new window icon and psr updates

--- a/view/adminhtml/templates/analytics/overview.phtml
+++ b/view/adminhtml/templates/analytics/overview.phtml
@@ -101,7 +101,7 @@
                     <?php endif ?>
                 </div>
                 <div class="analytics-footer">
-                    <a href="https://www.algolia.com/analytics/popular/" target="_blank"><?php echo __('See more searches') ?></a>
+                    <a href="https://www.algolia.com/analytics/popular/" target="_blank" class="algoliasearch-admin-icon as-icon-new-window"><?php echo __('See more searches') ?></a>
                 </div>
             </div>
             <div class="one-third section no-result-searches">
@@ -141,7 +141,7 @@
                     <?php endif ?>
                 </div>
                 <div class="analytics-footer">
-                    <a href="https://www.algolia.com/analytics/popular/" target="_blank"><?php echo __('See more results') ?></a>
+                    <a href="https://www.algolia.com/analytics/popular/" target="_blank" class="algoliasearch-admin-icon as-icon-new-window"><?php echo __('See more results') ?></a>
                 </div>
             </div>
             <div class="one-third section no-result-searches">
@@ -173,7 +173,7 @@
                     <?php endif ?>
                 </div>
                 <div class="analytics-footer">
-                    <a href="https://www.algolia.com/analytics/no-results/" target="_blank"><?php echo __('See more no results') ?></a>
+                    <a href="https://www.algolia.com/analytics/no-results/" class="algoliasearch-admin-icon as-icon-new-window" target="_blank"><?php echo __('See more no results') ?></a>
                 </div>
             </div>
         </div>
