--- a/view/adminhtml/templates/support/overview.phtml
+++ b/view/adminhtml/templates/support/overview.phtml
@@ -135,7 +135,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             </div>
 
             <div class="sub">
-                Get answers by the Algolia Community
+                Questions and answers from the Algolia community
             </div>
         </div>
         <div class="links">
@@ -236,7 +236,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
         Didn't find what you were looking for?
         <a href="<?php echo $this->getUrl('*/*/contact'); ?>">Contact us</a>.
     <?php else: ?>
-        Consider <a href="https://www.algolia.com/apps/<?php echo $this->getApplicationId(); ?>/billing/overview" target="_blank">upgrading your plan</a>
+        Consider <a href="https://www.algolia.com/apps/<?php echo $this->getApplicationId(); ?>/billing/overview" target="_blank">updating your plan</a>
         to get direct and fast email help by Algolia experts.
     <?php endif; ?>
 </div>
