--- a/view/adminhtml/templates/support/contact.phtml
+++ b/view/adminhtml/templates/support/contact.phtml
@@ -1,6 +1,8 @@
 <?php /** @var $this \Algolia\AlgoliaSearch\Block\Adminhtml\Support\Contact */
 
-use Magento\Backend\Block\Template; ?>
+use Magento\Backend\Block\Template;
+
+?>
 
 <?php echo $block
     ->getLayout()
