--- a/view/adminhtml/templates/support/contact.phtml
+++ b/view/adminhtml/templates/support/contact.phtml
@@ -114,7 +114,7 @@ use Magento\Backend\Block\Template;
                                     ->getLayout()
                                     ->createBlock(Template::class)
                                     ->setTemplate('Algolia_AlgoliaSearch::ui/tooltip.phtml')
-                                    ->setData('message', __('The additional data can speed up the support process by providing our team more context on your implementation'))
+                                    ->setData('message', __('The additional data can speed up the support process by providing our team more context on your implementation.'))
                                     ->toHtml();
                                 ?>
                             </span>
