--- a/view/adminhtml/templates/support/contact.phtml
+++ b/view/adminhtml/templates/support/contact.phtml
@@ -4,12 +4,7 @@ use Magento\Backend\Block\Template;
 
 ?>
 
-<?php echo $block
-    ->getLayout()
-    ->createBlock(Algolia\AlgoliaSearch\Block\Adminhtml\Support\Components\LegacyVersion::class)
-    ->setTemplate('Algolia_AlgoliaSearch::support/components/legacy-version.phtml')
-    ->toHtml();
-?>
+<?php echo $this->getLegacyVersionHtml(); ?>
 
 <form method="post" action="" class="algolia_contact_form" data-mage-init='{"validation":{}}'>
     <input type="hidden" name="form_key" value="<?php echo $this->getFormKey() ?>" />
@@ -83,15 +78,11 @@ use Magento\Backend\Block\Template;
                                 <li>Algolia extension configuration</li>
                                 <li>
                                     Indexing queue information
-                                    <?php echo $block
-                                            ->getLayout()
-                                            ->createBlock(Template::class)
-                                            ->setTemplate('Algolia_AlgoliaSearch::ui/tooltip.phtml')
-                                            ->setData('message', __('
-                                                - Number of jobs in indexing queue<br>
-                                                - Information about last 20 failed indexing jobs<br>
-                                                - Creation time of the oldest job in indexing queue
-                                            '))->toHtml();
+                                    <?php echo $this->getTooltipHtml(__('
+                                            - Number of jobs in indexing queue<br>
+                                            - Information about last 20 failed indexing jobs<br>
+                                            - Creation time of the oldest job in indexing queue
+                                        '));
                                     ?>
                                 </li>
                             </ul>
@@ -110,12 +101,10 @@ use Magento\Backend\Block\Template;
                         <label class="admin__actions-switch-label" for="send_additional_info">
                             <span class="admin__actions-switch-text">
                                 Attach list of installed 3rd party modules and catalog size
-                                <?php echo $block
-                                    ->getLayout()
-                                    ->createBlock(Template::class)
-                                    ->setTemplate('Algolia_AlgoliaSearch::ui/tooltip.phtml')
-                                    ->setData('message', __('The additional data can speed up the support process by providing our team more context on your implementation.'))
-                                    ->toHtml();
+                                <?php echo $this->getTooltipHtml(__('
+                                        The additional data can speed up the support process 
+                                        by providing Algolia team more context on your implementation.
+                                    '));
                                 ?>
                             </span>
                         </label>
