--- a/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
+++ b/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
@@ -6,23 +6,28 @@ $configHelper = $this->getConfigHelper();
 
 ?>
 
+<div class="algolia_help_block">
+    <b>Merchandising tool</b> allows you to promote specific products on your category page.
+    It is based on <b>query rules</b>, as it helps you influence the results for a given query
+    (here, an empty search on a category). For each category you merchandize, new query rule will be created.
+    <br><br>
+    Find out more about Algolia Merchandising, please refer to <a href="https://community.algolia.com/magento/doc/m2/visual-category-merchandising/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">documentation</a>.
+</div>
+
 <?php if (!$this->isQueryRulesEnabled()): ?>
 
-    <div class="messages">
-        <div class="message message-info info">
-            Not available.
-        </div>
+    <div class="algolia_not_enabled_block">
+        Unfortunately, you are not eligible to use this Algolia feature.
+        Please consider <a href="https://www.algolia.com/billing/overview" target="_blank">upgrading to a higher plan</a>.
     </div>
 
 <?php return; endif; ?>
 
 <?php if ($this->isRootCategory()): ?>
 
-<div class="messages">
-    <div class="message message-info info">
-        The root category is not displayed on Magento's frontend and therefore it's not indexed within Algolia records.
-        <br>To merchandise products, please select any sub-category.
-    </div>
+<div class="algolia_not_enabled_block">
+    The root category is not displayed on Magento's frontend and therefore it's not indexed within Algolia records.
+    To merchandise products, please select any sub-category.
 </div>
 
 <?php return; endif; ?>
@@ -33,18 +38,15 @@ $configHelper = $this->getConfigHelper();
     $instantSearchLink = $this->getUrl('adminhtml/system_config/edit/section/algoliasearch_instant');
 ?>
 
-<div class="messages">
-    <div class="message message-info info">
+<div class="algolia_not_enabled_block">
         To merchandise products using Algolia
         you need to enable <b>Instant search</b> with <b>Replace category pages</b> feature.
         You can do it in Algolia's <a href="<?php echo $instantSearchLink; ?>" target="_blank">Instant Search configuration</a>.
         <br><br>
         <b>Instant search</b> with enabled <b>Replace category pages</b> feature gives your customers a great experience
         while browsing your catalog. It enables your customers to search and filter for products at real time resulting
-        in better customer journey.<br>
-        With the speed and relevancy of Algolia your customers are more likely to purchase
+        in better customer journey. With the speed and relevancy of Algolia your customers are more likely to purchase
         and enjoy the shopping on your store(s).
-    </div>
 </div>
 
 <?php return; endif; ?>
@@ -54,9 +56,7 @@ $configHelper = $this->getConfigHelper();
 $indexName = $this->getCoreHelper()->getBaseIndexName();
 
 $category = $this->getCategory();
-
 $categoryId = $category->getId();
-$categoryName = $category->getName();
 
 $isConfig = [
     'appId' => $configHelper->getApplicationID(),
@@ -71,7 +71,7 @@ $isConfig = [
             'magento-category-' . $categoryId,
         ],
         'facetFilters' => [
-            'categoryIds:' . $this->getCategory()->getId(),
+            'categoryIds:' . $categoryId,
         ],
     ],
 ];
@@ -84,20 +84,6 @@ $isConfig = [
 <input type="hidden" name="algolia_merchandising_positions" value="" data-form-part="category_form" />
 
 <script type="text/template" id="algolia_merchandising_all_items_template">
-    <div>
-        <p>
-            On this page you see the exact products in the exact order
-            as your customers see it on "<?php echo $categoryName; ?>" category page.<br>
-            Drag & drop products to a specific position and pin it there to have the product displayed always in this position.
-        </p>
-        <p class="info">
-            Merchandising will create <a href="https://www.algolia.com/doc/guides/query-rules/query-rules-overview/" target="_blank">1 query rule</a>
-            for each merchandised category. Each Algolia plan has a <a href="https://www.algolia.com/pricing" target="_blank">query rules quota</a>,
-            which cannot be exceeded.<br>
-            Query rule is created only when a category contains at least one "pinned" product.
-            When there are no "pinned" products, no query rule is created.
-        </p>
-    </div>
     <br>
     <label for="algolia_merchandising_autocomplete">
         <input type="text" id="algolia_merchandising_autocomplete" placeholder="Add another item to promote ..." />
