--- a/view/adminhtml/templates/analytics/overview.phtml
+++ b/view/adminhtml/templates/analytics/overview.phtml
@@ -188,7 +188,7 @@ $view = $this->getViewModel();
 </div>
 
 <?php if (!$view->isClickAnalyticsEnabled()): ?>
-    <div class="algolia_help_block">
+    <div class="algolia_blue_block icon-documentation">
         Enhance your Analytics with <b>Algolia Click Analytics</b> that provide you even more insights
         like Click-through Rate, Conversion Rate from searches and average click position.
         Click Analytics are only available for higher plans and require only minor additional settings.
