--- a/view/adminhtml/templates/common.phtml
+++ b/view/adminhtml/templates/common.phtml
@@ -54,7 +54,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 
 	        /** FEATURE ENABLEMENT **/
 	        var notEnabledText = `
-                <div class="algolia_not_enabled_block">
+                <div class="algolia_white_block icon-sadface">
                     Unfortunately, you are not eligible to use this Algolia feature.
                     Please consider <a href="https://www.algolia.com/billing/overview" target="_blank">upgrading to a higher plan</a>.
                 </div>
@@ -69,7 +69,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
             // Query rules in facets
             if (isQueryRulesEnabled === false) {
             	$('select[name*=create_rule]').val('2').prop('disabled', 'disabled');
-            	$('#row_algoliasearch_instant_instant_facets .algolia_help_block').after(notEnabledText);
+            	$('#row_algoliasearch_instant_instant_facets .algolia_blue_block').after(notEnabledText);
             }
 
             // QUEUE INFO
@@ -80,23 +80,29 @@ document.addEventListener("DOMContentLoaded", function(event) {
                     baseUrl = url.substring(0, position);
 
                 $.getJSON(baseUrl + '/algolia_algoliasearch/queue/info/', function(queueInfo) {
-                    var message = '<span style="font-size: 25px; position: relative; top: 5px;">⚠</span> ' +
-                        '<strong style="font-size: 1.15em;">Your <a href="https://community.algolia.com/magento/doc/m2/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">Indexing Queue</a> is not enabled</strong><br>' +
-                        'It is highly recommended that you enable it, especially if you are on a production environment. ' +
-                        'You can learn how to enable the index queue in our documentation: <a href="https://community.algolia.com/magento/doc/m2/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">Indexing Queue</a>';
+                	var message = `
+                        <div class="algolia_white_block icon-warning">
+                            <b><a href="https://community.algolia.com/magento/doc/m2/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">Indexing Queue</a> is not enabled</b><br>
+                            It is highly recommended that you enable it, especially if you are on a production environment.
+                            (here, an empty search on a category). For each category you merchandize, new query rule will be created.
+                            <br><br>
+                            Find out more about Indexing Queue in <a href="https://community.algolia.com/magento/doc/m2/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">documentation</a>.
+                        </div>`;
 
                     if (queueInfo.isEnabled === true) {
-                        message = '<strong style="font-size: 1.15em;"><a href="https://community.algolia.com/magento/doc/m2/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">Indexing queue</a> information</strong><br>' +
-                            'Number of queued jobs: <strong>' + queueInfo.currentSize + '</strong>, ' +
-                            'all queued jobs will be processed in appr. <strong>' + queueInfo.eta + '</strong> ' +
-                            '<small style="color: #2f2f2f; font-size: .8em;">(assuming your queue runner runs every 5 minutes)</small><br>' +
-                            'If you want to clear the queue, hit the button: <button class="algolia_clear_queue">Clear the queue</button><br />' +
-                            '<small style="color: #2f2f2f; font-size: .9em; display: inline-block;">' +
-                            'More information about how the indexing queue works you can find in the documentation: <a href="https://community.algolia.com/magento/doc/m2/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">Indexing queue</a>' +
-                            '</small>';
+                        message = `
+                            <div class="algolia_white_block icon-bulb">
+                                <b><a href="https://community.algolia.com/magento/doc/m2/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">Indexing queue</a> information</b><br>
+                                Number of queued jobs: <strong>` + queueInfo.currentSize + `</strong>,
+                                all queued jobs will be processed in appr. <strong>` + queueInfo.eta + `</strong>
+                                <small style="color: #2f2f2f; font-size: .8em;">(assuming your queue runner runs every 5 minutes)</small>.
+                                If you want to clear the queue, hit the button: <button class="algolia_clear_queue">Clear the queue</button>                                <br>
+                                <br>
+                                Find out more about Indexing Queue in <a href="https://community.algolia.com/magento/doc/m2/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">documentation</a>.
+                            </div>`;
                     }
 
-                    $('.entry-edit').before('<div style="font-size: 1.1em; line-height: 25px; padding: 3px 8px; border: 1px solid; margin-bottom: 10px; color: #333;">' + message + '</div>');
+                    $('.entry-edit').before(message);
                 });
 
 	            $(document).on('click', '.algolia_clear_queue', function(e) {
