--- a/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
+++ b/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
@@ -9,44 +9,44 @@ $configHelper = $this->getConfigHelper();
 <div class="algolia_block blue icon-documentation">
     <b>Merchandising tool</b> allows you to promote specific products on your category page.
     It is based on <b>query rules</b>, as it helps you influence the results for a given query
-    (here, an empty search on a category). For each category you merchandize, new query rule will be created.
+    (here, an empty search on a category). For each category you merchandize, a new query rule will be created.
     <br><br>
     Find out more about Algolia Merchandising, please refer to <a href="https://community.algolia.com/magento/doc/m2/visual-category-merchandising/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">documentation</a>.
 </div>
 
 <?php if (!$this->isQueryRulesEnabled()): ?>
 
-    <div class="algolia_block icon-sadface">
-        Unfortunately, you are not eligible to use this Algolia feature.
-        Please consider <a href="https://www.algolia.com/billing/overview" target="_blank">upgrading to a higher plan</a>.
+    <br>
+    <div class="algolia_block icon-stars">
+        To get access to this Algolia feature,
+        please consider <a href="https://www.algolia.com/billing/overview" target="_blank">upgrading to a higher plan</a>.
     </div>
 
 <?php return; endif; ?>
 
 <?php if ($this->isRootCategory()): ?>
 
-<div class="algolia_block icon-sadface">
-    The root category is not displayed on Magento's frontend and therefore it's not indexed within Algolia records.
-    To merchandise products, please select any sub-category.
-</div>
+    <br>
+    <div class="algolia_block icon-bulb">
+        The root category is not displayed on Magento's frontend and therefore it's not indexed within Algolia records.
+        To merchandise products, please select any sub-category.
+    </div>
 
 <?php return; endif; ?>
-
-
 
 <?php if (!$configHelper->isInstantEnabled() || !$configHelper->replaceCategories()):
     $instantSearchLink = $this->getUrl('adminhtml/system_config/edit/section/algoliasearch_instant');
 ?>
 
-<div class="algolia_block icon-sadface">
-        To merchandise products using Algolia
-        you need to enable <b>Instant search</b> with <b>Replace category pages</b> feature.
-        You can do it in Algolia's <a href="<?php echo $instantSearchLink; ?>" target="_blank">Instant Search configuration</a>.
-        <br><br>
-        <b>Instant search</b> with enabled <b>Replace category pages</b> feature gives your customers a great experience
-        while browsing your catalog. It enables your customers to search and filter for products at real time resulting
-        in better customer journey. With the speed and relevancy of Algolia your customers are more likely to purchase
-        and enjoy the shopping on your store(s).
+<div class="algolia_block icon-stars">
+    To merchandise products using Algolia
+    you need to enable <b>Instant search</b> with <b>Replace category pages</b> feature.
+    You can do it in Algolia's <a href="<?php echo $instantSearchLink; ?>" target="_blank">Instant Search configuration</a>.
+    <br><br>
+    <b>Instant search</b> with enabled <b>Replace category pages</b> feature gives your customers a great experience
+    while browsing your catalog. It enables your customers to search and filter for products at real time resulting
+    in better customer journey. With the speed and relevancy of Algolia your customers are more likely to purchase
+    and enjoy the shopping on your store(s).
 </div>
 
 <?php return; endif; ?>
