Add utm for href links to doc

--- a/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
+++ b/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
@@ -81,7 +81,7 @@ $isConfig = [
             Drag & drop products to a specific position and pin it there to have the product displayed always in this position.
         </p>
         <p class="info">
-            Merchandising will create <a href="https://www.algolia.com/doc/guides/managing-results/refine-results/merchandising-and-promoting/in-depth/query-rules-overview/" target="_blank">1 query rule</a>
+            Merchandising will create <a href="https://www.algolia.com/doc/guides/managing-results/refine-results/merchandising-and-promoting/in-depth/query-rules-overview/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">1 query rule</a>
             for each merchandised category. Each Algolia plan has a <a href="https://www.algolia.com/pricing" target="_blank">query rules quota</a>,
             which cannot be exceeded.<br>
             Query rule is created only when a category contains at least one "pinned" product.
