--- a/view/frontend/templates/internals/configuration.phtml
+++ b/view/frontend/templates/internals/configuration.phtml
@@ -5,7 +5,7 @@
 $configuration = $block->getConfiguration();
 
 ?>
-
+<script src="//polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.includes%2CPromise" crossorigin="anonymous"></script>
 <script>
     <?php
     if ($configuration['instant']['enabled'] === true && $configuration['isSearchPage'] === true) :
